--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
           distribution: 'temurin'   # Distribución recomendada de OpenJDK
           java-version: '17'
 
+
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
       # 3️⃣ Dar permisos de ejecución al wrapper de Gradle
       - name: Grant execute permission for Gradle
         run: chmod +x gradlew
