--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,7 @@ spring:
 #Configurar el servidor embebido (Tomcat)
 server:
   port: 8080
+
+#Configuración de la aplicación
+app:
+  version: "1.0.0-dev"  # Se actualiza automáticamente en cada despliegue
