--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CD - Deploy to Render (desde CI)
 
 on:
   workflow_run:
-    workflows: ["CI"]
+    workflows: ["CI - Build and Test"]
     types:
       - completed
 
